--- a/app/src/main/res/layout/activity_game_over.xml
+++ b/app/src/main/res/layout/activity_game_over.xml
@@ -9,80 +9,90 @@
     tools:context="com.ellophantdesign.haayhappen.Buttons.gameOverActivity"
     android:background="@drawable/gradient_background">
 
-    <TextView
-        android:text="Game Over!"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="86dp"
-        android:id="@+id/tv_gameover"
-        android:textAlignment="center"
-        android:textColor="@android:color/white"
-        android:textSize="60sp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:text="Your final score is:"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView8"
-        android:textColor="@android:color/white"
-        android:textSize="20sp"
-        android:textAlignment="center"
-        android:layout_below="@+id/tv_gameover"
-        android:layout_centerHorizontal="true" />
-
-    <Button
-        android:id="@+id/playagainbutton"
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/button_style"
-        android:text="Play again!"
-        android:textColor="#ffffff"
-        android:textSize="25sp"
-        android:layout_below="@+id/finalscore"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="26dp"
-        android:visibility="invisible"
-        android:onClick="onPlayAgainPressed" />
+        android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/backtomenubutton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/button_style"
-        android:text="Back to menu"
-        android:textColor="#ffffff"
-        android:textSize="25sp"
-        android:layout_below="@+id/playagainbutton"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="10dp"
-        android:visibility="invisible"
-        android:onClick="onBackToMenuPressed" />
+        <TextView
+            android:text="Game Over!"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="86dp"
+            android:id="@+id/tv_gameover"
+            android:textAlignment="center"
+            android:textColor="@android:color/white"
+            android:textSize="60sp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true" />
 
-    <TextView
-        android:text="0"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/finalscore"
-        android:textAlignment="center"
-        android:textColor="@android:color/white"
-        android:textSize="60sp"
-        android:layout_below="@+id/textView8"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="12dp"
-        android:visibility="invisible" />
+        <TextView
+            android:text="Your final score is:"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView8"
+            android:textColor="@android:color/white"
+            android:textSize="20sp"
+            android:textAlignment="center"
+            android:layout_below="@+id/tv_gameover"
+            android:layout_centerHorizontal="true" />
 
-    <com.google.android.gms.ads.NativeExpressAdView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/adView"
-        ads:adSize="360x100"
-        ads:adUnitId="ca-app-pub-4970672389873444/3568885213"/>
+        <TextView
+            android:text="0"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/finalscore"
+            android:textColor="@android:color/white"
+            android:textSize="60sp"
+            android:layout_below="@+id/textView8"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="12dp"
+            android:visibility="invisible" />
+
+        <Button
+            android:id="@+id/playagainbutton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button_style"
+            android:text="Play again!"
+            android:textColor="#ffffff"
+            android:textSize="25sp"
+            android:layout_below="@+id/finalscore"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="26dp"
+            android:visibility="invisible"
+            android:onClick="onPlayAgainPressed"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp" />
+
+        <Button
+            android:id="@+id/backtomenubutton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button_style"
+            android:text="Back to menu"
+            android:textColor="#ffffff"
+            android:textSize="25sp"
+            android:layout_below="@+id/playagainbutton"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="10dp"
+            android:visibility="invisible"
+            android:onClick="onBackToMenuPressed"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp" />
+
+        <com.google.android.gms.ads.NativeExpressAdView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/adView"
+            ads:adSize="360x100"
+            ads:adUnitId="ca-app-pub-4970672389873444/3568885213"
+            android:layout_alignParentBottom="true"
+            android:layout_marginTop="90dp" />
+    </LinearLayout>
 
 </RelativeLayout>
