--- a/app/src/main/res/layout/activity_game_over.xml
+++ b/app/src/main/res/layout/activity_game_over.xml
@@ -38,15 +38,16 @@
             android:layout_centerHorizontal="true" />
 
         <TextView
-            android:text="0"
+            android:id="@+id/finalscore"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/finalscore"
-            android:textColor="@android:color/white"
-            android:textSize="60sp"
             android:layout_below="@+id/textView8"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="12dp"
+            android:text="0"
+            android:textAlignment="center"
+            android:textColor="@android:color/white"
+            android:textSize="60sp"
             android:visibility="invisible" />
 
         <Button
