--- a/app/src/main/res/layout/activity_gamemode.xml
+++ b/app/src/main/res/layout/activity_gamemode.xml
@@ -45,6 +45,22 @@
             android:layout_marginTop="60dp" />
 
         <Button
+            android:id="@+id/Icons"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/Pokemons"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/button_style"
+            android:onClick="onIconButtonClicked"
+            android:text="@string/icons_gamemode"
+            android:textAlignment="center"
+            android:textColor="#ffffff"
+            android:textSize="25sp"
+            android:visibility="visible" />
+
+        <Button
             android:id="@+id/Pokemons"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -62,32 +78,17 @@
             android:id="@+id/iconsbuybutton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/button_style"
-            android:textAlignment="center"
-            android:textColor="#ffffff"
-            android:textSize="25sp"
-            android:text="@string/try_icons_gamemode"
-            android:onClick="buyClick"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_below="@+id/Pokemons"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="10dp" />
-
-        <Button
-            android:id="@+id/Icons"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:background="@drawable/button_style"
+            android:onClick="buyClick"
+            android:text="@string/try_icons_gamemode"
             android:textAlignment="center"
             android:textColor="#ffffff"
             android:textSize="25sp"
-            android:text="@string/icons_gamemode"
-            android:onClick="onIconButtonClicked"
-            android:visibility="gone"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="10dp"
-            android:layout_below="@+id/Pokemons"/>
+            android:visibility="gone" />
 
     </LinearLayout>
 
