--- a/app/src/main/res/layout/activity_pokemon.xml
+++ b/app/src/main/res/layout/activity_pokemon.xml
@@ -83,15 +83,15 @@
             android:id="@+id/screencolor"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_marginBottom="115dp"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginTop="100dp"
             android:layout_weight="3"
+            android:adjustViewBounds="true"
             android:background="@android:color/white"
             android:padding="20dp"
-            android:adjustViewBounds="true"
-            android:scaleType="fitCenter"
-            android:layout_marginBottom="110dp"
-            android:layout_marginRight="50dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginTop="100dp" />
+            android:scaleType="fitCenter" />
         <Button
             android:id="@+id/screenbackground"
             android:layout_width="match_parent"
