--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -29,7 +29,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.49"
-                android:text="Time:"
+                android:text="  Time:"
                 android:textColor="@color/common_google_signin_btn_text_light_pressed"
                 android:textSize="20sp" />
 
@@ -98,7 +98,8 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@color/colorRed"
-                android:enabled="false" />
+                android:enabled="false"
+                tools:ignore="ButtonStyle" />
 
             <Button
                 android:id="@+id/btn_green"
@@ -107,7 +108,8 @@
                 android:layout_weight="1"
                 android:background="@color/colorGreen"
                 android:onClick="onGreenPressed"
-                android:enabled="false" />
+                android:enabled="false"
+                tools:ignore="ButtonStyle" />
 
             <Button
                 android:id="@+id/btn_beige"
@@ -116,7 +118,8 @@
                 android:layout_weight="1"
                 android:background="@color/colorBeige"
                 android:onClick="onBeigePressed"
-                android:enabled="false" />
+                android:enabled="false"
+                tools:ignore="ButtonStyle" />
 
             <Button
                 android:id="@+id/btn_yellow"
@@ -125,7 +128,8 @@
                 android:layout_weight="1"
                 android:background="@color/colorYellow"
                 android:onClick="onYellowPressed"
-                android:enabled="false" />
+                android:enabled="false"
+                tools:ignore="ButtonStyle" />
         </LinearLayout>
 
 
