--- a/app/src/main/res/layout/activity_pokemon.xml
+++ b/app/src/main/res/layout/activity_pokemon.xml
@@ -28,7 +28,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.49"
-                android:text="@string/time"
+                android:text="  Time:"
                 android:textColor="@color/common_google_signin_btn_text_light_pressed"
                 android:textSize="20sp" />
 
